--- a/Selenium/test-output/old/Default suite/classes.html
+++ b/Selenium/test-output/old/Default suite/classes.html
@@ -4,14 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.skosay.test.login.ConsumerLogin</td>
+<td>com.skosay.test.register.ConsumerRegister</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>testFindElements</td>
+<td>testApplyNoValueOnPasswordAndConfirm</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
