--- a/Selenium/test-output/old/Default suite/methods.html
+++ b/Selenium/test-output/old/Default suite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e8568">  <td>14/11/25 11:57:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ConsumerLogin.setUp()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6ea6d14e]">&gt;&gt;setUp</td> 
+<tr bgcolor="8e8568">  <td>14/11/25 14:46:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ConsumerRegister.setUp()[pri:0, instance:com.skosay.test.register.ConsumerRegister@6ea6d14e]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398887205</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/11/25 11:57:55</td>   <td>14820</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLogin.testFindElements()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6ea6d14e]">testFindElements</td> 
+<tr bgcolor="8e8568">  <td>14/11/25 14:46:41</td>   <td>15938</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerRegister.testApplyNoValueOnPasswordAndConfirm()[pri:0, instance:com.skosay.test.register.ConsumerRegister@6ea6d14e]">testApplyNoValueOnPasswordAndConfirm</td> 
   <td>main@398887205</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/11/25 11:58:01</td>   <td>21332</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerLogin.tearDown()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6ea6d14e]">&lt;&lt;tearDown</td> 
+<tr bgcolor="8e8568">  <td>14/11/25 14:46:48</td>   <td>22333</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerRegister.tearDown()[pri:0, instance:com.skosay.test.register.ConsumerRegister@6ea6d14e]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398887205</td>   <td></td> </tr>
 </table>
