--- a/Selenium/test-output/old/Default suite/methods.html
+++ b/Selenium/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e8568">  <td>14/11/25 14:58:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ConsumerRegister.setUp()[pri:0, instance:com.skosay.test.register.ConsumerRegister@6ea6d14e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398887205</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/11/25 14:58:35</td>   <td>22477</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerRegister.testValid()[pri:0, instance:com.skosay.test.register.ConsumerRegister@6ea6d14e]">testValid</td> 
-  <td>main@398887205</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/11/25 14:59:35</td>   <td>82732</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ConsumerRegister.tearDown()[pri:0, instance:com.skosay.test.register.ConsumerRegister@6ea6d14e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@398887205</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/11/25 17:38:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ManagerLogin.setUp()[pri:0, instance:com.skosay.test.login.ManagerLogin@6ea6d14e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114889273</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/11/25 17:38:51</td>   <td>18555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.testApplyManager1()[pri:0, instance:com.skosay.test.login.ManagerLogin@6ea6d14e]">testApplyManager1</td> 
+  <td>main@2114889273</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/11/25 17:39:13</td>   <td>40261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.testInvalidCredentials()[pri:0, instance:com.skosay.test.login.ManagerLogin@6ea6d14e]">testInvalidCredentials</td> 
+  <td>main@2114889273</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/11/25 17:39:16</td>   <td>43846</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManagerLogin.tearDown()[pri:0, instance:com.skosay.test.login.ManagerLogin@6ea6d14e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114889273</td>   <td></td> </tr>
 </table>
