--- a/Selenium/test-output/old/Default suite/methods.html
+++ b/Selenium/test-output/old/Default suite/methods.html
@@ -1,12 +1,24 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e8568">  <td>14/11/25 17:38:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ManagerLogin.setUp()[pri:0, instance:com.skosay.test.login.ManagerLogin@6ea6d14e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114889273</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/11/25 17:38:51</td>   <td>18555</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.testApplyManager1()[pri:0, instance:com.skosay.test.login.ManagerLogin@6ea6d14e]">testApplyManager1</td> 
-  <td>main@2114889273</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/11/25 17:39:13</td>   <td>40261</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.testInvalidCredentials()[pri:0, instance:com.skosay.test.login.ManagerLogin@6ea6d14e]">testInvalidCredentials</td> 
-  <td>main@2114889273</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/11/25 17:39:16</td>   <td>43846</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ManagerLogin.tearDown()[pri:0, instance:com.skosay.test.login.ManagerLogin@6ea6d14e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2114889273</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:20:51</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ConsumerLogin.setUp()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@6569903</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:21:57</td>   <td>66307</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLogin.validLogin()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">validLogin</td> 
+  <td>main@6569903</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:22:14</td>   <td>82973</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLogin.invalidLoginAccountNotConfirmed()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">invalidLoginAccountNotConfirmed</td> 
+  <td>main@6569903</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:23:14</td>   <td>142714</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLogin.invalidLoginIncorrectEmail()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">invalidLoginIncorrectEmail</td> 
+  <td>main@6569903</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:23:20</td>   <td>149284</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLogin.invalidLoginIncorrectPassword()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">invalidLoginIncorrectPassword</td> 
+  <td>main@6569903</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:23:27</td>   <td>156329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLogin.invalidLogin()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">invalidLogin</td> 
+  <td>main@6569903</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:23:33</td>   <td>162632</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLogin.noInputEmail()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">noInputEmail</td> 
+  <td>main@6569903</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:23:40</td>   <td>168900</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLogin.noInputPassword()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">noInputPassword</td> 
+  <td>main@6569903</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:23:48</td>   <td>177137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ConsumerLogin.noInput()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">noInput</td> 
+  <td>main@6569903</td>   <td></td> </tr>
+<tr bgcolor="8e8568">  <td>14/12/01 09:23:54</td>   <td>183596</td> <td>&nbsp;</td><td title="&lt;&lt;ConsumerLogin.tearDown()[pri:0, instance:com.skosay.test.login.ConsumerLogin@6a03af]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@6569903</td>   <td></td> </tr>
 </table>
