Create User Test Cases

--- a/Selenium/test-output/old/Default suite/classes.html
+++ b/Selenium/test-output/old/Default suite/classes.html
@@ -4,38 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.skosay.test.login.ManagerLogin</td>
+<td>com.skosay.test.datamanagement.UpdateUser</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>validLogin</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>noInputEmail</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>noInput</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>invalidLoginIncorrectPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>invalidLogin</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>noInputPassword</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>invalidLoginIncorrectEmail</td>
+<td>testApplyEditCancel</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
