--- a/Selenium/test-output/old/Default suite/methods.html
+++ b/Selenium/test-output/old/Default suite/methods.html
@@ -1,22 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8e8568">  <td>14/12/03 10:39:01</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;ManagerLogin.setUp()[pri:0, instance:com.skosay.test.login.ManagerLogin@546a03af]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@509886383</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/12/03 10:45:30</td>   <td>389158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.validLogin()[pri:0, instance:com.skosay.test.login.ManagerLogin@546a03af]">validLogin</td> 
-  <td>main@509886383</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/12/03 10:46:04</td>   <td>423041</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.invalidLoginIncorrectEmail()[pri:0, instance:com.skosay.test.login.ManagerLogin@546a03af]">invalidLoginIncorrectEmail</td> 
-  <td>main@509886383</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/12/03 10:50:15</td>   <td>673860</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.invalidLoginIncorrectPassword()[pri:0, instance:com.skosay.test.login.ManagerLogin@546a03af]">invalidLoginIncorrectPassword</td> 
-  <td>main@509886383</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/12/03 10:52:30</td>   <td>809528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.invalidLogin()[pri:0, instance:com.skosay.test.login.ManagerLogin@546a03af]">invalidLogin</td> 
-  <td>main@509886383</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/12/03 10:54:45</td>   <td>944486</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.noInputEmail()[pri:0, instance:com.skosay.test.login.ManagerLogin@546a03af]">noInputEmail</td> 
-  <td>main@509886383</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/12/03 10:56:55</td>   <td>1074408</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.noInputPassword()[pri:0, instance:com.skosay.test.login.ManagerLogin@546a03af]">noInputPassword</td> 
-  <td>main@509886383</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/12/03 10:58:00</td>   <td>1139420</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ManagerLogin.noInput()[pri:0, instance:com.skosay.test.login.ManagerLogin@546a03af]">noInput</td> 
-  <td>main@509886383</td>   <td></td> </tr>
-<tr bgcolor="8e8568">  <td>14/12/03 10:58:06</td>   <td>1145379</td> <td>&nbsp;</td><td title="&lt;&lt;ManagerLogin.quit()[pri:0, instance:com.skosay.test.login.ManagerLogin@546a03af]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@509886383</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:17:04</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;UpdateUser.setUp()[pri:0, instance:com.skosay.test.datamanagement.UpdateUser@6ad5c04e]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:17:37</td>   <td>33211</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateUser.testApplyEditCancel()[pri:0, instance:com.skosay.test.datamanagement.UpdateUser@6ad5c04e]">testApplyEditCancel</td> 
+  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:18:07</td>   <td>63285</td> <td>&nbsp;</td><td title="&lt;&lt;UpdateUser.quit()[pri:0, instance:com.skosay.test.datamanagement.UpdateUser@6ad5c04e]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
 </table>
