--- a/Selenium/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,36 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="aa7090">  <td>15/01/13 17:18:07</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;UpdateUser.quit()[pri:0, instance:com.skosay.test.datamanagement.UpdateUser@6ad5c04e]">&lt;&lt;quit</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/01/13 17:17:04</td>   <td>-63285</td> <td>&nbsp;</td><td title="&gt;&gt;UpdateUser.setUp()[pri:0, instance:com.skosay.test.datamanagement.UpdateUser@6ad5c04e]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@191382150</td>   <td></td> </tr>
-<tr bgcolor="aa7090">  <td>15/01/13 17:17:37</td>   <td>-30074</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UpdateUser.testApplyEditCancel()[pri:0, instance:com.skosay.test.datamanagement.UpdateUser@6ad5c04e]">testApplyEditCancel</td> 
-  <td>main@191382150</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:45:34</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;CreateUser.quit()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">&lt;&lt;quit</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:37:14</td>   <td>-500878</td> <td>&nbsp;</td><td title="&gt;&gt;CreateUser.setUp()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:42:08</td>   <td>-206144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApply128CharEmail()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApply128CharEmail</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:41:28</td>   <td>-246731</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApply255CharName()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApply255CharName</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:44:01</td>   <td>-93669</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApply255CharPass()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApply255CharPass</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:44:30</td>   <td>-64427</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApply7CharPass()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApply7CharPass</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:39:19</td>   <td>-375214</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyBlankSpaceEmail()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyBlankSpaceEmail</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:38:53</td>   <td>-401323</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyBlankSpaceName()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyBlankSpaceName</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:39:28</td>   <td>-366472</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyBlankSpacePass()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyBlankSpacePass</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:37:37</td>   <td>-477223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyInvalidEmail()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyInvalidEmail</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:45:24</td>   <td>-10648</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyNotClear()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyNotClear</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:38:07</td>   <td>-447080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyUsedEmail()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyUsedEmail</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:44:56</td>   <td>-38270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyUserAdmin()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyUserAdmin</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:45:18</td>   <td>-16223</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyUserConsumer()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyUserConsumer</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:45:00</td>   <td>-34231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyUserDManager()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyUserDManager</td> 
+  <td>main@142666848</td>   <td></td> </tr>
+<tr bgcolor="aa7090">  <td>15/01/13 17:45:07</td>   <td>-27567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CreateUser.testApplyUserManager()[pri:0, instance:com.skosay.test.datamanagement.CreateUser@6833ce2c]">testApplyUserManager</td> 
+  <td>main@142666848</td>   <td></td> </tr>
 </table>
